feature/all working

--- a/guests_gifts.html
+++ b/guests_gifts.html
@@ -32,15 +32,9 @@
 
         <label for="gift">Lista de presentes:<br>(tica aí o que tu comprou, ou vai comprar)</label>
         <select id="gift" name="gift[]">
-            <option value="" >Selecione um presente</option>
-            <option value="" style="color: navy; font-size: 14px; font-weight: bold" disabled>R$ 50 até R$ 100</option>
-            <option value="" style="color: navy; font-size: 14px; font-weight: bold" disabled>R$ 100 até R$ 150</option>
-            <option value="" style="color: navy; font-size: 14px; font-weight: bold" disabled>R$ 150 até R$ 200</option>
-            <option value="" style="color: navy; font-size: 14px; font-weight: bold" disabled>R$ 200 até R$ 250</option>
-            <option value="" style="color: navy; font-size: 14px; font-weight: bold" disabled>R$ 250 até R$ 300</option>
-            <option value="" style="color: navy; font-size: 14px; font-weight: bold" disabled>R$ 300 até R$ 450</option>
-            <option value="" style="color: navy; font-size: 14px; font-weight: bold" disabled>R$ 450 até R$ 650</option>
         </select><br><br>
+
+        <div id="giftLinkDisplay"></div> <!-- Element to display the gift link -->
 
         <button type="submit">Submit</button>
 
