feature/front visualmente finalizado

--- a/guests_gifts.html
+++ b/guests_gifts.html
@@ -28,15 +28,15 @@
                     <input type="radio" name="companion" value="with-company"> eu e casca de bala
                 </label>
             </div>
-        </div><br>
+        </div>
 
         <label for="gift">Lista de presentes:<br>(tica aí o que tu comprou, ou vai comprar)</label>
         <select id="gift" name="gift[]">
-        </select><br><br>
+        </select><br>
 
         <div id="giftLinkDisplay"></div> <!-- Element to display the gift link -->
 
-        <button type="submit">Submit</button>
+        <button type="submit">Enviar confirmação</button>
 
         <h4>Ó, se quiser mandar pra cá, o endereço é:</h4>
         <ln>
